--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.17.1",
     "date-fns": "^2.26.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
