--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
