--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.17.1",
+    "axios": "^0.24.0",
     "date-fns": "^2.26.0",
+    "jotai": "^1.4.5",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
