--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "date-fns": "^2.26.0",
+    "dotenv": "^10.0.0",
     "jotai": "^1.4.5",
     "moment": "^2.29.1",
     "react": "^17.0.2",
