--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.13",
-    "mongoose-unique-validator": "^3.0.0"
+    "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.3",
+    "uuid": "^8.3.2"
   }
 }
