--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.0.13",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.3",
+    "node-cron": "^3.0.0",
     "uuid": "^8.3.2"
   }
 }
