--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.26.0",
     "dotenv": "^10.0.0",
     "jotai": "^1.4.5",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
